Finished snl ui except for laddders